--- a/App_client/package.json
+++ b/App_client/package.json
@@ -9,16 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.1.2",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@expo/webpack-config": "^18.0.1",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "expo": "~49.0.7",
-    "expo-status-bar": "~1.6.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.4",
+    "connected-react-router": "^6.9.3",
+    "date-fns": "^2.29.3",
+    "expo": "~48.0.6",
+    "expo-checkbox": "^2.4.0",
+    "expo-device": "^5.4.0",
+    "expo-image-picker": "^14.1.1",
+    "expo-linear-gradient": "^12.3.0",
+    "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.6",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-paper": "^5.5.0",
@@ -34,18 +44,10 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "@react-navigation/drawer": "^6.6.2",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "axios": "^1.3.4",
-    "connected-react-router": "^6.9.3",
-    "date-fns": "^2.29.3",
-    "expo-checkbox": "^2.4.0",
-    "expo-device": "^5.4.0",
-    "expo-image-picker": "^14.1.1",
-    "expo-linear-gradient": "^12.3.0",
-    "moment": "^2.29.4",
-    "react-dom": "18.2.0"
+    "react-navigation-drawer": "^2.7.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
