--- a/App_client/package.json
+++ b/App_client/package.json
@@ -20,23 +20,23 @@
     "connected-react-router": "^6.9.3",
     "date-fns": "^2.29.3",
     "expo": "~48.0.6",
-    "expo-checkbox": "^2.4.0",
-    "expo-device": "^5.4.0",
-    "expo-image-picker": "^14.1.1",
-    "expo-linear-gradient": "^12.3.0",
+    "expo-checkbox": "~2.3.1",
+    "expo-device": "~5.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-paper": "^5.5.0",
     "react-native-radio-buttons": "^1.0.0",
-    "react-native-reanimated": "^2.14.4",
+    "react-native-reanimated": "~2.14.4",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.2",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-socket.io-client": "^1.4.8",
