--- a/App_client/package.json
+++ b/App_client/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -22,9 +23,12 @@
     "expo": "~48.0.6",
     "expo-checkbox": "~2.3.1",
     "expo-device": "~5.2.1",
+    "expo-facebook": "^12.2.0",
+    "expo-google-sign-in": "12.0.0",
     "expo-image-picker": "~14.1.1",
-    "expo-linear-gradient": "~12.1.2",
+    "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
+    "install": "^0.13.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
